--- a/app1/src/main/res/layout/activity_plugin_test1.xml
+++ b/app1/src/main/res/layout/activity_plugin_test1.xml
@@ -5,13 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello PluginTest1!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp">
 
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Hello PluginTest1!" />
+
+        <Button
+            android:id="@+id/toPluginTest2ActivityBt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv1"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="20dp"
+            android:text="跳转PluginTest2Activity"
+            android:textAllCaps="false" />
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
