[feature] 组件化第三步[组件间通讯]

--- a/app2/src/main/res/layout/activity_plugin_test2.xml
+++ b/app2/src/main/res/layout/activity_plugin_test2.xml
@@ -5,13 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello PluginTest2!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Hello PluginTest2!" />
+
+        <Button
+            android:id="@+id/cWithApp1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:text="与Module app1通信"
+            android:textAllCaps="false" />
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
